[gd_scene load_steps=26 format=2]

[ext_resource path="res://Pics/atmosphere.png" type="Texture" id=1]
[ext_resource path="res://Script/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Pics/btn01_alt_b.png" type="Texture" id=3]
[ext_resource path="res://Pics/btn01_normal.png" type="Texture" id=4]
[ext_resource path="res://Pics/btn02_normal.png" type="Texture" id=5]
[ext_resource path="res://Pics/btn02_hover.png" type="Texture" id=6]
[ext_resource path="res://Pics/btn01_hover.png" type="Texture" id=7]
[ext_resource path="res://Script/Main.gd" type="Script" id=8]
[ext_resource path="res://Pics/thrusters_1.png" type="Texture" id=9]
[ext_resource path="res://Pics/earth_small.png" type="Texture" id=10]
[ext_resource path="res://Script/earth.gd" type="Script" id=11]
[ext_resource path="res://Script/ParallaxBackground.gd" type="Script" id=12]

[sub_resource type="AnimatedTexture" id=1]
frames = 2
fps = 20.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.47451, 0.768627, 0.313726, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.764706, 0.305882, 0.305882, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.506058, 0.981445, 0.889525, 1, 0.588235, 0.94902, 0.866667, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 20

[sub_resource type="ParticlesMaterial" id=9]
trail_divisor = 10
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( -1.103, 5.325, 0 )
spread = 13.96
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 720.0
angular_velocity_random = 0.86
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.86
color_ramp = SubResource( 8 )
hue_variation = -0.04
hue_variation_random = 0.62

[sub_resource type="ParticlesMaterial" id=10]
trail_divisor = 10
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 1.103, 5.325, 0 )
spread = 13.96
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 720.0
angular_velocity_random = 0.86
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.86
color_ramp = SubResource( 8 )
hue_variation = -0.04
hue_variation_random = 0.62

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.0152672, 0.801527, 1, 2.172 )
colors = PoolColorArray( 0.581932, 0.993164, 0.914996, 0.862595, 0.505882, 0.980392, 0.890196, 0, 0, 1, 0.811765, 0, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 2

[sub_resource type="ParticlesMaterial" id=13]
trail_divisor = 200
emission_shape = 2
emission_box_extents = Vector3( 15.305, 4.533, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 138.51
angular_velocity = 500.0
angular_velocity_random = 0.86
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 22.99
radial_accel = 134.06
angle = 12.8
angle_random = 0.67
scale = 0.8
scale_random = 0.86
color_ramp = SubResource( 12 )
hue_variation = -0.04
hue_variation_random = 0.62

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="Control" type="CanvasLayer" parent="."]
layer = -101

[node name="bg" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="Control"]
script = ExtResource( 12 )

[node name="StarLayer" type="ParallaxLayer" parent="Control/ParallaxBackground"]

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 330.0
margin_top = 300.0
margin_right = 390.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="Menu"]
margin_right = 60.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( -291.621, -80.3666 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = SubResource( 1 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="Menu"]
margin_top = 21.1037
margin_right = 60.0
margin_bottom = 36.1037
rect_pivot_offset = Vector2( -291.621, -80.3666 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="Menu"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = -238.0
margin_right = 45.0
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Label" parent="Menu/PauseMenu"]
margin_right = 91.0
margin_bottom = 14.0
text = "PAUSE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="Menu/PauseMenu"]
margin_top = 18.0
margin_right = 91.0
margin_bottom = 38.0
custom_styles/hover = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Menu/PauseMenu"]
margin_top = 42.0
margin_right = 91.0
margin_bottom = 62.0
custom_styles/hover = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="earth" type="KinematicBody2D" parent="."]
script = ExtResource( 11 )
rotateSpd = 0.2
thrustPower_rotation = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="earth"]
shape = SubResource( 4 )

[node name="continent" type="AnimatedSprite" parent="earth"]
frames = SubResource( 5 )
animation = "New Anim"

[node name="atmosphere" type="AnimatedSprite" parent="earth"]
z_index = 1
frames = SubResource( 6 )
animation = "New Anim"

[node name="thrusters_1" type="Sprite" parent="earth"]
position = Vector2( 0, 10 )
z_index = 1
texture = ExtResource( 9 )

[node name="left_thrust" type="Particles2D" parent="earth/thrusters_1"]
position = Vector2( -22.6727, -4.10542 )
amount = 100
lifetime = 0.2
visibility_rect = Rect2( -100, -100, 200.137, 200 )
process_material = SubResource( 9 )

[node name="right_thrust" type="Particles2D" parent="earth/thrusters_1"]
position = Vector2( 22.673, -4.105 )
amount = 100
lifetime = 0.2
visibility_rect = Rect2( -100, -100, 200.137, 200 )
process_material = SubResource( 10 )

[node name="forward_thrust" type="Particles2D" parent="earth/thrusters_1"]
position = Vector2( 0, 12.689 )
amount = 6000
lifetime = 0.2
visibility_rect = Rect2( -100, -100, 200.137, 200 )
process_material = SubResource( 13 )

[node name="Camera2D" type="Camera2D" parent="earth"]
current = true

[connection signal="pressed" from="Menu/Play" to="Menu" method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Play" to="earth" method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Quit" to="Menu" method="_on_Quit_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/resume" to="Menu" method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/quit" to="Menu" method="_on_quit_pressed"]
